--- a/package.json
+++ b/package.json
@@ -4,16 +4,27 @@
   "description": "博客系统，可自定义整个网站",
   "main": "generate.js",
   "scripts": {
-    "build": " node generate.js",
-    "dev": "node server.js",
-    "testtrans": "node transform.js"
+    "gen": " node generate.js",
+    "server": "node server.js",
+    "trans": "node transform.js"
   },
   "author": "gmono",
   "license": "MIT",
   "dependencies": {
+    "@types/highlight.js": "^9.12.3",
     "@types/marked": "^0.7.2",
+    "@types/walk": "^2.3.0",
+    "@types/watch": "^1.0.1",
+    "@wrote/ensure-path": "^1.1.0",
+    "art-template": "^4.13.2",
     "front-matter": "^3.0.2",
-    "marked": "^0.8.0"
+    "highlight": "^0.2.4",
+    "highlight.js": "^9.17.1",
+    "marked": "^0.8.0",
+    "ndir": "^0.1.5",
+    "nightmare": "^3.0.2",
+    "walk": "^2.3.14",
+    "watch": "^1.0.2"
   },
   "devDependencies": {
     "@types/node": "^13.1.4"
