成功在node中实现了prism高亮

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -53,5 +53,5 @@
     // "emitDecoratorMetadata": true,         /* Enables experimental support for emitting type metadata for decorators. */
   },
   "include": ["./app"],
-  "exclude": []
+  "exclude": ["./node_modules"]
 }
