--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@types/highlight.js": "^9.12.3",
     "@types/marked": "^0.7.2",
+    "@types/prismjs": "^1.16.0",
     "@types/walk": "^2.3.0",
     "@types/watch": "^1.0.1",
     "@wrote/ensure-path": "^1.1.0",
@@ -23,10 +24,11 @@
     "marked": "^0.8.0",
     "ndir": "^0.1.5",
     "nightmare": "^3.0.2",
+    "prismjs": "^1.18.0",
     "walk": "^2.3.14",
     "watch": "^1.0.2"
   },
   "devDependencies": {
-    "@types/node": "^13.1.4"
+    "@types/node": "^13.1.6"
   }
 }
