完成了一部分的generator的元数据记录功能

--- a/config.json
+++ b/config.json
@@ -1,5 +1,5 @@
 {
-    "test_url":"./test.html",
+    "base_url":"/",
     "code_languages":[
         "js","html","css",
         "ts","tsx","jsx",
