--- a/package.json
+++ b/package.json
@@ -6,13 +6,16 @@
   "scripts": {
     "gen": " node generate.js",
     "server": "node server.js",
-    "trans": "node transform.js"
+    "trans": "node transform.js",
+    "site": "node changesite.js",
+    "use":"node sitegen.js"
   },
   "author": "gmono",
   "license": "MIT",
   "dependencies": {
     "@types/cheerio": "^0.22.15",
     "@types/dateformat": "^3.0.1",
+    "@types/fs-extra": "^8.0.1",
     "@types/highlight.js": "^9.12.3",
     "@types/marked": "^0.7.2",
     "@types/prismjs": "^1.16.0",
@@ -21,8 +24,11 @@
     "@wrote/ensure-path": "^1.1.0",
     "art-template": "^4.13.2",
     "cheerio": "^1.0.0-rc.3",
+    "copy-dir": "^1.2.0",
     "dateformat": "^3.0.3",
+    "del": "^5.1.0",
     "front-matter": "^3.0.2",
+    "fs-extra": "^8.1.0",
     "highlight": "^0.2.4",
     "highlight.js": "^9.17.1",
     "marked": "^0.8.0",
