--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "site": "node ./dist_server/changesite.js",
     "use": "node ./dist_server/sitegen.js",
     "server": "node ./dist_server/server.js",
-    "blog":"node ./dist_server/blog.js"
+    "blog": "node ./dist_server/blog.js"
   },
   "author": "gmono",
   "license": "MIT",
@@ -19,6 +19,8 @@
     "@types/dateformat": "^3.0.1",
     "@types/fs-extra": "^8.0.1",
     "@types/highlight.js": "^9.12.3",
+    "@types/koa": "^2.11.0",
+    "@types/koa-static": "^4.0.1",
     "@types/marked": "^0.7.2",
     "@types/prismjs": "^1.16.0",
     "@types/walk": "^2.3.0",
@@ -34,6 +36,8 @@
     "fs-extra": "^8.1.0",
     "highlight": "^0.2.4",
     "highlight.js": "^9.17.1",
+    "koa": "^2.11.0",
+    "koa-static": "^5.0.0",
     "marked": "^0.8.0",
     "ndir": "^0.1.5",
     "nightmare": "^3.0.2",
