--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "@types/koa-static": "^4.0.1",
     "@types/marked": "^0.7.2",
     "@types/prismjs": "^1.16.0",
+    "@types/react": "^16.9.19",
+    "@types/react-dom": "^16.9.5",
     "@types/walk": "^2.3.0",
     "@types/watch": "^1.0.1",
     "@wrote/ensure-path": "^1.1.0",
