服务器改用cluster实现，实现了服务器指定配置文件 使用专门的“mouse”操作区实现了横纵向滚动兼容 下一步：实现单独的完善的“MouseArea”元件 解决generator的删除文件bug问题

--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "cheerio": "^1.0.0-rc.3",
     "commander": "^4.1.0",
     "copy-dir": "^1.2.0",
+    "core-decorators": "^0.20.0",
     "dateformat": "^3.0.3",
     "del": "^5.1.0",
     "front-matter": "^3.0.2",
