研究了如何引入pageloader的问题 安装了webpack，准备改换工作流

--- a/package.json
+++ b/package.json
@@ -48,7 +48,8 @@
     "prismjs": "^1.18.0",
     "rxjs": "^6.5.4",
     "walk": "^2.3.14",
-    "watch": "^1.0.2"
+    "watch": "^1.0.2",
+    "webpack": "^4.41.5"
   },
   "devDependencies": {
     "@types/node": "^13.1.6"
