--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "site": "node ./dist_server/changesite.js",
     "use": "node ./dist_server/sitegen.js",
     "server": "node ./dist_server/server.js",
+    "dev":"node ./dist_server/dev.js",
     "blog": "node ./dist_server/blog.js"
   },
   "author": "gmono",
