添加refresh命令和dev命令 npm scripts中 把use任务改为refresh任务 修改default背景图 修复bug

--- a/package.json
+++ b/package.json
@@ -8,9 +8,9 @@
     "watch": "node ./dist_server/watch.js",
     "trans": "node ./dist_server/transform.js",
     "site": "node ./dist_server/changesite.js",
-    "use": "node ./dist_server/sitegen.js",
+    "refresh": "node ./dist_server/sitegen.js",
     "server": "node ./dist_server/server.js",
-    "dev":"node ./dist_server/dev.js",
+    "dev": "node ./dist_server/dev.js",
     "blog": "node ./dist_server/blog.js"
   },
   "author": "gmono",
@@ -30,6 +30,7 @@
     "@types/watch": "^1.0.1",
     "@wrote/ensure-path": "^1.1.0",
     "art-template": "^4.13.2",
+    "blessed": "^0.1.81",
     "cheerio": "^1.0.0-rc.3",
     "commander": "^4.1.0",
     "copy-dir": "^1.2.0",
