--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "path-extra": "^4.3.0",
     "prismjs": "^1.18.0",
     "rxjs": "^6.5.4",
+    "spinnies": "^0.5.1",
     "walk": "^2.3.14",
     "watch": "^1.0.2",
     "webpack": "^4.41.5"
