--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@types/fs-extra": "^8.0.1",
     "@types/highlight.js": "^9.12.3",
     "@types/koa": "^2.11.0",
+    "@types/koa-router": "^7.4.0",
     "@types/koa-static": "^4.0.1",
     "@types/lodash": "^4.14.149",
     "@types/marked": "^0.7.2",
@@ -45,7 +46,9 @@
     "highlight": "^0.2.4",
     "highlight.js": "^9.17.1",
     "koa": "^2.11.0",
+    "koa-router": "^8.0.7",
     "koa-static": "^5.0.0",
+    "koa-static-router": "^1.3.0",
     "lodash": "^4.17.15",
     "marked": "^0.8.0",
     "ndir": "^0.1.5",
