--- a/package.json
+++ b/package.json
@@ -3,6 +3,15 @@
   "version": "0.0.1",
   "description": "博客系统，可自定义整个网站",
   "main": "generate.js",
+  "bin": "./dist_server/blog.js",
+  "pkg":{
+    "scripts": [
+      "./dist_server/**/*.js"
+      ],
+      "assets": [
+          "./static/**/*"
+      ]
+  },
   "scripts": {
     "gen": " node ./dist_server/generator.js",
     "watch": "node ./dist_server/watch.js",
@@ -41,6 +50,7 @@
     "dateformat": "^3.0.3",
     "del": "^5.1.0",
     "delay": "^4.3.0",
+    "execa": "^4.0.0",
     "front-matter": "^3.0.2",
     "fs-extra": "^8.1.0",
     "highlight": "^0.2.4",
