--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "dev": "node ./dist_server/dev.js",
     "blog": "node ./dist_server/blog.js",
     "test": "node ./dist_server/testLib.js",
-    "pkg":"pkg -t win package.json"
+    "pkg":"pkg  package.json -o ./bin/blog"
   },
   "author": "gmono",
   "license": "MIT",
