init程序初步编写完成（尚未通过打包测试）

--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
       "./node_modules/prismjs/components/*.js"
       ],
       "assets": [
-          "./static/**/*"
+          "./static/**/*",
+          "./sites/default/**/*",
+          "./config/default.json"
           
       ]
   },
