设置输出sourcemap支持调试,init程序复制文件支持pkg打包（测试成功) init程序复制文件采用基于walk和stream pipe的方式

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -7,7 +7,17 @@
         {
             "type": "node",
             "request": "launch",
-            "name": "Launch Program",
+            "name": "init",
+            "program": "${workspaceFolder}/dist_server/init.js",
+            "skipFiles": [
+                "<node_internals>/**"
+            ]
+        },
+    
+        {
+            "type": "node",
+            "request": "launch",
+            "name": "test",
             "skipFiles": [
                 "<node_internals>/**"
             ],
