init程序复制sites/default下的子目录失败 目前考虑可能式pkg打包或innerCopy函数的问题 有待测试 除上述问题外，其余程序均经过打包测试，可以在独立blog目录正常工作，且性能优于直接运行脚本

--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.1",
   "description": "博客系统，可自定义整个网站",
   "main": "generate.js",
-  "bin": "./dist_server/init.js",
+  "bin": "./dist_server/blog.js",
   "pkg": {
     "scripts": [
       "./node_modules/prismjs/components/*.js"
@@ -12,7 +12,8 @@
       "./static/**/*",
       "./sites/default/**/*",
       "./config/*.json",
-      "./assets/**/*"
+      "./assets/**/*",
+      "./index.html"
     ]
   },
   "scripts": {
