探索了sync程序工作进程失效的原因 目前怀疑是由于cluster模块的特性导致无法直接定位到函数

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -7,8 +7,20 @@
         {
             "type": "node",
             "request": "launch",
+            "name": "sync",
+            "program": "${workspaceFolder}/dist_server/blog.js",
+            "args": ["sync","default","80"],
+            "skipFiles": [
+                "<node_internals>/**"
+            ]
+        },
+
+        {
+            "type": "node",
+            "request": "launch",
             "name": "init",
-            "program": "${workspaceFolder}/dist_server/init.js",
+            "program": "${workspaceFolder}/dist_server/blog.js",
+            "args": ["init","tst","y"],
             "skipFiles": [
                 "<node_internals>/**"
             ]
