修改package.json生成2平台二进制程序(windows linux) linux二进制发行版基本测试成功 linux sync服务器成功启动但访问被拒绝，认为可能与防火墙拦截有关 发布0.5.1-alpha版本

--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "blog": "node ./dist_server/blog.js",
     "test": "node ./dist_server/testLib.js",
     "initBlog":"node ./dist_server/init.js",
-    "pkg": "pkg  package.json -o ./bin/blog"
+    "pkg": "pkg -t win,linux package.json -o ./bin/blog"
   },
   "author": "gmono",
   "license": "MIT",
