--- a/package.json
+++ b/package.json
@@ -74,6 +74,7 @@
     "prismjs": "^1.18.0",
     "rxjs": "^6.5.4",
     "spinnies": "^0.5.1",
+    "toml": "^3.0.0",
     "walk": "^2.3.14",
     "watch": "^1.0.2",
     "yaml": "^1.7.2"
