--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
   "author": "gmono",
   "license": "MIT",
   "dependencies": {
+    "@idrsolutions/buildvu": "^4.1.3",
     "@types/cheerio": "^0.22.15",
     "@types/dateformat": "^3.0.1",
     "@types/fs-extra": "^8.0.1",
