--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "@types/lodash": "^4.14.149",
     "@types/marked": "^0.7.2",
     "@types/prismjs": "^1.16.0",
+    "@types/prompts": "^2.0.3",
     "@types/react": "^16.9.19",
     "@types/react-dom": "^16.9.5",
     "@types/walk": "^2.3.0",
@@ -73,6 +74,7 @@
     "opn": "^6.0.0",
     "path-extra": "^4.3.0",
     "prismjs": "^1.18.0",
+    "prompts": "^2.3.1",
     "rxjs": "^6.5.4",
     "spinnies": "^0.5.1",
     "toml": "^3.0.0",
