修改了transformer的导出接口,规范了transformer的导出形式 初步进行了动态加载改造（尚未完成)

--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "bin": "./dist_server/blog.js",
   "pkg": {
     "scripts": [
-      "./node_modules/prismjs/components/*.js"
+      "./node_modules/prismjs/components/*.js",
+      "./dist_server/transforms/*.js"
     ],
     "assets": [
       "./static/**/*",
