完成动态加载改造并测试,目前generator可工作但存在漏生成问题 删除testLib.ts

--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "pkg": {
     "scripts": [
       "./node_modules/prismjs/components/*.js",
-      "./dist_server/transforms/*.js"
+      "./dist_server/transforms/**/*.js"
     ],
     "assets": [
       "./static/**/*",
