--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -4,6 +4,7 @@
     // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
     "version": "0.2.0",
     "configurations": [
+
         {
             "type": "node",
             "request": "launch",
@@ -29,11 +30,12 @@
         {
             "type": "node",
             "request": "launch",
-            "name": "test",
+            "name": "generate",
             "skipFiles": [
                 "<node_internals>/**"
             ],
-            "program": "${workspaceFolder}\\dist_server\\testLib.js",
+            "program": "${workspaceFolder}\\dist_server\\blog.js",
+            "args": ["generate"],
             "outFiles": [
                 "${workspaceFolder}/**/*.js"
             ]
