添加新的打包任务，动态加载transformer打包后generate测试成功 walk对pkg虚拟文件系统的支持正常 丰富transformer导出的信息，添加自我描述信息和初始化函数

--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
       "./sites/default/**/*",
       "./config/*.json",
       "./assets/**/*",
-      "./index.html"
+      "./index.html",
+      "./global.json"
     ]
   },
   "scripts": {
@@ -28,7 +29,8 @@
     "blog": "node ./dist_server/blog.js",
     "test": "node ./dist_server/testLib.js",
     "initBlog": "node ./dist_server/init.js",
-    "pkg": "pkg -t win,linux package.json -o ./bin/blog"
+    "pkgall": "pkg -t win,linux package.json -o ./bin/blog-release",
+    "pkg":"pkg package.json -o ./blog"
   },
   "author": "gmono",
   "license": "MIT",
