修复bug 目前丝般顺滑

--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
       "./config/*.json",
       "./assets/**/*",
       "./index.html",
-      "./global.json"
+      "./global.json",
+      "./articles/about.md"
     ]
   },
   "repository": {
